# tpot-analysis

./: .gitignore  kibana_log_structure.json  pyproject.toml  readme.md  requirements.txt
ai/layer1/: analyze_session.py  prompts.py  schema.py
ai/rag/: enrich.py  ingest_suricata.py  mitre_ingest.py  mitre_query.py  query.py  run_enrich.py  sigma_ingest.py  sigma_query.py  suricata_ingest.py  suricata_query.py
etl/: fetcher.py  normalize.py  sessionize.py
tests/: rag_mitre_test.py  rag_sigma_test.py  test_rag_crosslink.py
tpot_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ui/: app.py
ui/static/css/: style.css
ui/static/js/: main.js
ui/templates/: index.html
